# superconfig

./: .gitignore  .prototools  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  deny.toml.backup  dprint.json  flake.nix  lefthook.yml  moon.yml  rust-toolchain.toml
crates-archive/superconfig/: CHANGELOG.md  Cargo.toml  moon.yml
crates-archive/superconfig-ffi/: Cargo.toml  README.md  moon.yml
crates-archive/superconfig-ffi/reference/: PERFORMANCE_ANALYSIS.md  PERFORMANCE_MICROSECONDS.md  benchmark.mjs  benchmark_fixed.mjs  benchmark_python.py  nextjs-example.md  simple_python_benchmark.py  test_nextjs_simple.mjs  test_nodejs.js  test_python.py  test_usage.js  test_usage.py  test_wasi.mjs  test_wasm.html  test_wasm_node.js
crates-archive/superconfig-ffi/src/: lib.rs
crates-archive/superconfig/examples/: README.md
crates-archive/superconfig/src/: fluent.rs  lib.rs  verbosity.rs
crates-archive/superconfig/src/providers/: env.rs  mod.rs
crates-archive/superconfig/tests/: integration_tests.rs  verbosity_tests.rs
crates/hash-benchmark/: Cargo.toml  rust-toolchain.toml
crates/hash-benchmark/src/: main.rs
crates/logffi/: CHANGELOG.md  COVERAGE_ANALYSIS.md  Cargo.toml  README.md  doc-header.html
crates/logffi/benches/: error_info_performance.rs
crates/logffi/cookbook/: 01-basic-logging.md  01-destinations.md  02-error-handling.md  02-ffi-bindings.md  02-structured-logging.md  03-error-handling.md  03-source-error-chaining.md  04-ffi-integration.md  04-spans-instrumentation.md  05-advanced-tracing.md  05-backend-configuration.md  06-backend-selection.md  06-ffi-integration.md  07-error-monitoring-and-alerting.md  08-error-debugging-workflows.md  README.md
crates/logffi/coverage-report/: index.html
crates/logffi/coverage-report/html/: index.html
crates/logffi/examples/: advanced_tracing_features.rs  backend_showcase.rs  error_debugging_tools.rs  error_monitoring_dashboard.rs  field_interpolation_demo.rs  logffi_format_showcase.rs  logffi_source_chaining.rs  source_error_chaining.rs  structured_error_logging.rs  structured_logging_demo.rs  superconfig_errors.rs  tracing_showcase.rs
crates/logffi/plan/: 01-logffi-structure.txt
crates/logffi/plans/: tracing-native-bridge.md
crates/logffi/src/: callback.rs  error_macros.rs  generated_macros.rs  lib.rs  macros.rs  macros.rs.backup  tracing.rs
crates/logffi/src/backend/: callback_backend.rs  log_backend.rs  mod.rs  slog_backend.rs  tracing_backend.rs
crates/logffi/tests/: README.md
crates/logffi/tests/integration/: auto_init_tests.rs  auto_initialization.rs  backend_features.rs  callback_functionality.rs  callback_tests.rs  define_errors.rs  define_errors_logffi.rs  define_errors_thiserror.rs  error_analytics_integration.rs  error_info_method.rs  logffi_structured_logging.rs  logging_macros.rs  macro_error_tests.rs  macros.rs  mod.rs  thiserror.rs  tracing.rs  tracing_ecosystem.rs
crates/logfusion/: CHANGELOG.md  COVERAGE_ANALYSIS.md  Cargo.toml  README.md
crates/logfusion/benches/: error_info_performance.rs
crates/logfusion/cookbook/: 01-basic-logging.md  02-structured-logging.md  03-error-handling.md  04-spans-instrumentation.md  05-advanced-tracing.md  06-ffi-integration.md  07-error-monitoring-and-alerting.md  08-error-debugging-workflows.md  README.md
crates/logfusion/coverage-report/html/: control.js
crates/logfusion/examples/: advanced_tracing_features.rs  error_debugging_tools.rs  error_monitoring_dashboard.rs  field_interpolation_demo.rs  logfusion_format_showcase.rs  logfusion_source_chaining.rs  source_error_chaining.rs  structured_error_logging.rs  structured_logging_demo.rs  superconfig_errors.rs  tracing_showcase.rs
crates/logfusion/src/: lib.rs  macros.rs  tracing.rs
crates/logfusion/tests/: README.md
crates/logfusion/tests/integration/: auto_initialization.rs  callback_functionality.rs  define_errors_logfusion.rs  define_errors_thiserror.rs  error_analytics_integration.rs  error_info_method.rs  logfusion_structured_logging.rs  logging_macros.rs  mod.rs  thiserror.rs  tracing.rs
crates/meta-rust/: Cargo.toml  README.md
crates/meta-rust/plans/: enhanced-format-macro.md
crates/meta-rust/src/: for_each.rs  lib.rs
crates/meta-rust/src/loops/: for_each.rs
crates/meta-rust/tests/: debug_test.rs
crates/meta-rust/tests/integration/: mod.rs  transform_tests.rs
crates/rusttoolkit/: Cargo.toml  README.md  dump-1754571833866574.json  rust-toolchain.toml
crates/rusttoolkit/plans/: enhanced-format-macro.md
crates/rusttoolkit/src/: for_each.rs  lib.rs  meta.rs  transform.rs
crates/rusttoolkit/tests/: debug_test.rs  lib.rs
crates/superconfig/: CHANGELOG.md  Cargo.toml  coverage.lcov  coverage_analysis.lcov  coverage_detailed.txt  deny.toml  detailed_coverage.txt  detailed_regions.txt  moon.yml
crates/superconfig-macros/: CHANGELOG.md  COVERAGE_ANALYSIS.md  Cargo.toml  README.md  coverage.lcov
crates/superconfig-macros/coverage-report/: index.html
crates/superconfig-macros/src/: json_helper.rs  lib.rs  try_method.rs
crates/superconfig-macros/tests/: advanced_coverage_tests.rs  arc_handle_tests.rs  bidirectional_json_tests.rs  combined_tests.rs  comprehensive_coverage_tests.rs  coverage_focused_tests.rs  error_path_coverage_tests.rs  from_json_full_tests.rs  handle_mode_tests.rs  json_helper_coverage_tests.rs  json_helper_tests.rs  macro_error_tests.rs  try_method_tests.rs  unified_json_tests.rs
crates/superconfig/benches/: README.md  registry_bench.rs
crates/superconfig/coverage-report/: index.html
crates/superconfig/examples/: README.md  guardy_usage.rs
crates/superconfig/src/: access.rs  config_flags.rs  core.rs  flags.rs  fluent.rs  lib.rs  merge.rs  traits.rs  verbosity.rs
crates/superconfig/tests/: handle_id_tests.rs  integration_tests.rs  verbosity_tests.rs
crates/superffi/: CHANGELOG.md  Cargo.toml  README.md  moon.yml  test-hook.md
crates/superffi/src/: lib.rs  tests.rs
crates/superhashmap/: Cargo.toml
crates/superhashmap/src/: lib.rs  map.rs  set.rs
crates/superscc/: CHANGELOG.md  Cargo.toml
crates/superscc/examples/: Cargo.toml
(+298 files in other folders)
