[workspace]
members = ["crates/superconfig"]
resolver = "2"

[workspace.dependencies]
# Core dependencies with latest versions
figment = { version = "0.10.19", features = ["json", "toml", "yaml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yml = "0.0.12"
anyhow = "1.0"