[package]
name = "superconfig-ffi"
version = "0.1.0"
edition = "2024"
keywords = ["configuration", "config", "ffi", "python", "nodejs", "wasm"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deepbrainspace/superconfig"
description = "FFI wrapper for SuperConfig with multi-language bindings"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
superconfig = { path = "../superconfig" }

# Optional FFI dependencies
napi = { version = "3.0", optional = true }
napi-derive = { version = "3.0", optional = true }
pyo3 = { version = "0.25", optional = true, features = ["extension-module"] }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
python = ["pyo3"]
nodejs = ["napi", "napi-derive"]
wasm = ["wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"] # cdylib needed for FFI bindings
