[package]
name = "logffi"
version = "0.1.0"
authors = ["Nayeem Syed <nayeem@deepbrain.ai>"]
categories = ["development-tools::debugging", "api-bindings"]
documentation = "https://docs.rs/logffi"
edition = "2024"
homepage = "https://github.com/deepbrain/superconfig/tree/main/crates/logffi"
keywords = ["logging", "ffi", "rust", "python", "nodejs"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/deepbrain/superconfig"
rust-version = "1.88"
description = "Drop-in replacement for log crate with FFI callback support for bridging Rust logs to Python, Node.js, and other languages"

[dependencies]
# Existing log support
log = "0.4.27"

# Universal backend dependencies
slog = "2.7"
slog-async = "2.8"
slog-json = "2.6"
slog-term = "2.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# For macro generation and error handling
meta-rust = { path = "../meta-rust" }
paste = "1.0"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.11.8"
serial_test = "3.2.0"
