[package]
name = "logffi"
version = "0.1.0"
authors = ["Nayeem Syed <nayeem@deepbrain.ai>"]
categories = ["development-tools::debugging", "api-bindings"]
documentation = "https://docs.rs/logffi"
edition = "2024"
homepage = "https://github.com/deepbrain/superconfig/tree/main/crates/logffi"
keywords = ["logging", "ffi", "rust", "python", "nodejs"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/deepbrain/superconfig"
rust-version = "1.88"
description = "Multi-Backend (log/tracing/slog/callback) Logging and Error Handling (thiserror+define_error!) with FFI Integration Support"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["tracing"]
rustdoc-args = ["--html-in-header", "doc-header.html"]

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
callback = [] # Optional FFI callback support - NOT enabled by default

[dependencies]
# Core tracing (optional via features)
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"], optional = true }

# For macro generation, error handling, and conditional compilation
cfg-if = "1.0"
meta-rust = { path = "../meta-rust" }
paste = "1.0.15"
thiserror = "2.0.12"

[dev-dependencies]
env_logger = "0.11.8"
serde_json = "1.0"
serial_test = "3.2.0"
