[package]
name = "logfusion"
version = "0.1.0"
authors = ["Nayeem Syed <nayeem@deepbrain.ai>"]
categories = ["development-tools::debugging", "api-bindings"]
documentation = "https://docs.rs/logfusion"
edition = "2024"
homepage = "https://github.com/deepbrain/superconfig/tree/main/crates/logfusion"
keywords = ["logging", "tracing", "structured", "error-handling", "rust"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/deepbrain/superconfig"
rust-version = "1.88"
description = "Unified logging and error handling for Rust with structured data, tracing integration, and cross-language support"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["tracing"]
rustdoc-args = ["--html-in-header", "doc-header.html"]

[features]
default = ["tracing", "callback"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
callback = [] # Optional FFI callback support - NOT enabled by default

[dependencies]
# Core tracing (optional via features)
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"], optional = true }

# For macro generation, error handling, and conditional compilation
cfg-if = "1.0"
paste = "1.0.15"
rusttoolkit = { path = "../rusttoolkit" }
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11.8"
log = "0.4"
serde_json = "1.0"
serial_test = "3.2.0"
tokio = { version = "1.0", features = ["full"] }

[[bench]]
name = "error_info_performance"
harness = false

# Configure examples to run as tests
[[example]]
name = "error_monitoring_dashboard"
test = true

[[example]]
name = "structured_error_logging"
test = true

[[example]]
name = "error_debugging_tools"
test = true
