[package]
name = "meta-rust"
version = "0.1.0"
authors = ["Nayeem Syed"]
categories = ["development-tools", "rust-patterns"]
documentation = "https://docs.rs/meta-rust"
edition = "2024"
homepage = "https://github.com/deepbrain/superconfig/tree/main/crates/meta-rust"
keywords = ["macros", "metaprogramming", "codegen", "proc-macro", "rust"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/deepbrain/superconfig"
rust-version = "1.88"
description = "Universal Rust meta-programming toolkit with advanced code generation macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.91"
quote = "1.0.37"
syn = { version = "2.0.104", features = ["full", "parsing", "printing", "visit-mut", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0.110"

[features]
default = []
# Future feature flags for different macro families
loops = []
structs = []
functions = []
types = []
