[package]
name = "superconfig-macros"
version = "0.1.0"
categories = ["development-tools::procedural-macros", "config"]
documentation = "https://docs.rs/superconfig-macros"
edition = "2024"
keywords = ["config", "ffi", "macros", "error-handling", "fluent-api"]
license = "MIT"
repository = "https://github.com/deepbrainspace/superconfig"
description = "Procedural macros for SuperConfig fluent API error handling and FFI integration"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
