[package]
name = "superconfig-macros"
version = "0.1.0"
authors = ["Nayeem Syed <nayeem@deepbrain.ai>"]
categories = ["development-tools::procedural-macros", "config"]
documentation = "https://docs.rs/superconfig-macros"
edition = "2024"
homepage = "https://github.com/deepbrain/superconfig/tree/main/crates/superconfig-macros"
keywords = ["config", "ffi", "macros", "error-handling", "fluent-api"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/deepbrain/superconfig"
rust-version = "1.88"
description = "Procedural macros for SuperConfig fluent API error handling and FFI integration"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
