[package]
name = "superconfig"
version = "0.1.0"
edition = "2024"
description = "SuperConfig - Universal configuration management platform for all languages"
license = "MIT"
authors = ["Nayeem Syed <nayeem@deepbrainspace.com>"]
repository = "https://github.com/deepbrainspace/superconfig"
readme = "../../README.md"
keywords = ["config", "configuration", "universal", "multi-language", "wasm"]
categories = ["config", "development-tools", "parsing", "web-programming"]

[features]
default = ["core"]

# Core features
core = []
providers = ["core"]

# Future features (when we implement them)
# cli = ["core", "clap"]
# mcp = ["core", "tokio"]
# api = ["core", "axum", "tokio", "tower"]
# database = ["core", "sqlx", "tokio"]
# remote = ["core", "reqwest", "tokio"]  
# vault = ["core", "vaultrs", "tokio"]
# wasm = ["core", "wasm-bindgen"]

# Convenience feature for everything
all = ["providers"]

[dependencies]
# Core dependencies (always included)
figment = { version = "0.10.19", features = ["json", "toml", "yaml", "env"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_yml = "0.0.12"
lazy_static = "1.4"

# Optional core dependencies (used by features)
anyhow = "1.0"
serde_json = "1.0"

# Future optional dependencies (when we implement them)
# clap = { version = "4", optional = true, features = ["derive"] }
# tokio = { version = "1", optional = true, features = ["full"] }
# axum = { version = "0.8", optional = true }
# tower = { version = "0.5", optional = true }
# sqlx = { version = "0.8", optional = true, features = ["runtime-tokio", "postgres", "sqlite"] }
# reqwest = { version = "0.12", optional = true, features = ["json"] }
# vaultrs = { version = "0.7", optional = true }
# wasm-bindgen = { version = "0.2", optional = true }

[lints.clippy]
# Allow large error types to maintain 100% Figment compatibility.
# Figment's Error type is 208+ bytes, but changing to Box<Error> would break API compatibility.
# Users expect seamless integration between SuperConfig traits and standard Figment methods.
result_large_err = "allow"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
serial_test = "3.2.0"