[package]
name = "superconfig"
version = "0.2.0"
authors = ["Nayeem Syed <hello@superconfig.dev>"]
categories = ["config", "development-tools"]
documentation = "https://docs.rs/superconfig"
edition = "2024"
homepage = "https://superconfig.dev"
keywords = ["config", "configuration", "settings", "env", "performance"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/deepbrainspace/superconfig"
description = "High-performance configuration management with handle-based registry, zero-copy access, and multi-language support"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-theme = "ayu"

[features]
default = []

# Feature flags will be added during v2.1 implementation phases
# Features from v2.0 preserved in crates-archive/superconfigV2/ for reference

[dependencies]
# Core dependencies for v2.1 rewrite
logfusion = { path = "../logfusion" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141", features = ["raw_value"] }
thiserror = "2.0.12"

# Core data structures (kept from v2.0)
scc = "2.3.4"

# Additional dependencies will be added during implementation phases

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
env_logger = "0.11.8"
serial_test = "3.2.0"
tempfile = "3.15.0"
tokio-test = "0.4.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Benchmarks disabled during v2.1 rewrite
# [[bench]]
# name = "registry_bench"
# harness = false

[lints.clippy]
# Performance-focused lints (with proper priorities)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow large error types for rich error context
result_large_err = "allow"
