[package]
name = "superscc"
version = "2.3.4"
authors = ["wvwwvwwv <wvwwvwwv@me.com>"]
categories = ["asynchronous", "caching", "concurrency", "data-structures"]
documentation = "https://docs.rs/scc"
edition = "2021"
keywords = ["async", "cache", "concurrent", "hashmap", "tree"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wvwwvwwv/scalable-concurrent-containers/"
rust-version = "1.65.0"
description = "High-performance containers and utilities for concurrent and asynchronous programming"

[workspace]
members = [".", "examples"]

[dependencies]
equivalent = { version = "1.0", optional = true }
loom = { version = "0.7", optional = true }
sdd = "3.0"
serde = { version = "1.0", optional = true }

[features]
loom = ["dep:loom", "sdd/loom"]

[dev-dependencies]
criterion = "0.7"
futures = "0.3"
proptest = "1.7"
rand = "0.9"
serde_test = "1.0"
static_assertions = "1.1"
tokio = { version = "1.47", features = ["full"] }

[[bench]]
name = "bag"
harness = false

[[bench]]
name = "hash_map"
harness = false

[[bench]]
name = "hash_index"
harness = false

[[bench]]
name = "hash_cache"
harness = false

[[bench]]
name = "tree_index"
harness = false
